Fix the left align on the ice cream cone

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,12 @@
 html {
   font-family: "Fredoka One", sans-serif;
-  background-image: repeating-linear-gradient(-45deg, #d4fdff, #d4fdff 10px, #c9fcff 10px, #c9fcff 20px);
+  background-image: repeating-linear-gradient(-30deg, #d4fdff, #d4fdff 10px, #c9fcff 10px, #c9fcff 20px);
   text-shadow: 2px 2px rgba(0, 0, 0, .4);
+  border-top: 8px solid #b3fbff;
+  border-bottom: 8px solid #b3fbff;
+  padding-top: 2.5em;
+  padding-bottom: 6em;
+  padding-left: .75em;
 }
 
 .btn-ghost {
@@ -12,14 +17,14 @@ html {
 }
 
 .btn-ghost:hover {
-
+  background-color: #c09;
+  opacity: .5;
 }
 
 .text {
   color: #990073;
-  opacity: 100%;
   animation: text 150ms linear;
-  padding-bottom: 100px;
+  transform-origin: left;
 }
 
 img {
@@ -36,51 +41,49 @@ h1 {
   transform: rotate(-10deg);
 }
 
-.wrapper {
-  position: relative;
-  border-top: 8px solid #b3fbff;
-  border-bottom: 8px solid #b3fbff;
-}
-
 .cherry {
   z-index: 6;
-  right: 1em;
-  position: absolute;
-  animation: slide-in .6s ease-out forwards;
+  right: 4em;
+  animation: slide-in .6s linear forwards;
+  top: -90px;
 }
 
 .vanilla-fudge {
   z-index: 5;
-  right: 1em;
+  right: 4em;
   position: absolute;
-  animation: slide-in .5s ease-out forwards;
+  animation: slide-in .5s linear forwards;
+  top: 5px;
 }
 
 .chocolate-chip {
   z-index: 4;
-  right: 1em;
+  right: 4em;
   position: absolute;
-  animation: slide-in .4s ease-out forwards;
+  animation: slide-in .4s linear forwards;
+  top: 3em;
 }
 
 .mint-chip {
   z-index: 2;
-  right: 1em;
+  right: 4em;
   position: absolute;
-  animation: slide-in .3s ease-out forwards;
+  animation: slide-in .3s linear forwards;
+  top: 6em;
 }
 
 .cone {
   z-index: 3;
-  right: 1em;
+  right: 4em;
   position: absolute;
   animation: slide-in .2s linear forwards;
+  top: 12em;
 }
 
 @keyframes slide-in {
 
   0% {
-    transform: translateX(0em);
+    transform: translateX(0);
     transform: translateY(-500px);
   }
 
@@ -108,4 +111,5 @@ h1 {
   100% {
     filter: opacity(1);
   }
+
 }
